Path changes. Now there exists ShapePath which defines rectangle shapes paths and path segments. Added box2d integration actors.

--- a/examples/demo/ha2d.html
+++ b/examples/demo/ha2d.html
@@ -10,7 +10,48 @@
 <div id="container"></div>
 </body>
 
-<script type="text/javascript" src="../../build/caat.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/CAAT.js"></script>
+
+<script type="text/javascript" src="../../../CAAT/src/core/class.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/core/browserdetect.js"></script>
+
+<script type="text/javascript" src="../../../CAAT/src/model/audio.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/model/actor.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/model/conpoundimage.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/model/imagepreloader.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/model/director.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/model/mouseevent.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/model/timer.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/model/scene.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/model/extraActor.js"></script>
+
+<script type="text/javascript" src="../../../CAAT/src/box2d/box2Dactor.js"></script>
+
+<script type="text/javascript" src="../../../CAAT/src/math/affinetransform2D.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/math/point.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/math/rectangle.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/math/bezier.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/math/color.js"></script>
+
+<script type="text/javascript" src="../../../CAAT/src/path/path.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/path/pathactor.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/path/interpolator.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/path/interpolatorActor.js"></script>
+
+<script type="text/javascript" src="../../../CAAT/src/behaviour/behaviour.js"></script>
+
+<script type="text/javascript" src="../../../CAAT/src/modules/modules.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/modules/ImageUtil/ImageUtil.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/modules/LocalStorage/LocalStorage.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/modules/CircleManager/PackedCircle.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/modules/CircleManager/PackedCircleManager.js"></script>
+
+
+<script type="text/javascript" src="../../../CAAT/src/texture/plasma.js"></script>
+
+<script type="text/javascript" src="../../../CAAT/src/webgl/glTexturePage.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/webgl/glu.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/webgl/ShaderUtil.js"></script>
 
 
 <script type="text/javascript" src="scene1.js"></script>
@@ -35,7 +76,7 @@
 
 
 
-<script type="text/javascript" src="../../src/lib/stats.js"></script>
+<script type="text/javascript" src="../../../CAAT/src/lib/stats.js"></script>
 
 <script type="text/javascript">
 (function() {
