New compilation process On. Documentation and source code. Distributable caat files include version information.

--- a/documentation/symbols/src/_Users_ibon_js_CAAT_src_math_point.js.html
+++ b/documentation/symbols/src/_Users_ibon_js_CAAT_src_math_point.js.html
@@ -6,7 +6,7 @@
 	.REGX {color: #339;}
 	.line {border-right: 1px dotted #666; color: #666; font-style: normal;}
 	</style></head><body><pre><span class='line'>  1</span> <span class="COMM">/**
-<span class='line'>  2</span>  * @author  Hyperandroid  ||  http://hyperandroid.com/
+<span class='line'>  2</span>  * See LICENSE file.
 <span class='line'>  3</span>  *
 <span class='line'>  4</span>  * Hold a 2D point information.
 <span class='line'>  5</span>  * Think about the possibility of turning CAAT.Point into {x:,y:}.
@@ -24,9 +24,9 @@
 <span class='line'> 17</span>      * @constructor
 <span class='line'> 18</span>      */</span><span class="WHIT">
 <span class='line'> 19</span> </span><span class="WHIT">	</span><span class="NAME">CAAT.Point</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="KEYW">function</span><span class="PUNC">(</span><span class="NAME">xpos</span><span class="PUNC">,</span><span class="WHIT"> </span><span class="NAME">ypos</span><span class="PUNC">,</span><span class="WHIT"> </span><span class="NAME">zpos</span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="WHIT">
-<span class='line'> 20</span> </span><span class="WHIT">		</span><span class="NAME">this.x</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NAME">xpos</span><span class="WHIT"> </span><span class="PUNC">||</span><span class="WHIT"> </span><span class="NUMB">0</span><span class="PUNC">;</span><span class="WHIT">
-<span class='line'> 21</span> </span><span class="WHIT">		</span><span class="NAME">this.y</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NAME">ypos</span><span class="WHIT"> </span><span class="PUNC">||</span><span class="WHIT"> </span><span class="NUMB">0</span><span class="PUNC">;</span><span class="WHIT">
-<span class='line'> 22</span> </span><span class="WHIT">        </span><span class="NAME">this.z</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NAME">zpos</span><span class="WHIT"> </span><span class="PUNC">||</span><span class="WHIT"> </span><span class="NUMB">0</span><span class="PUNC">;</span><span class="WHIT">
+<span class='line'> 20</span> </span><span class="WHIT">		</span><span class="NAME">this.x</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NAME">xpos</span><span class="PUNC">;</span><span class="WHIT">
+<span class='line'> 21</span> </span><span class="WHIT">		</span><span class="NAME">this.y</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NAME">ypos</span><span class="PUNC">;</span><span class="WHIT">
+<span class='line'> 22</span> </span><span class="WHIT">        </span><span class="NAME">this.z</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NAME">zpos</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'> 23</span> </span><span class="WHIT">		</span><span class="KEYW">return</span><span class="WHIT"> </span><span class="KEYW">this</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'> 24</span> </span><span class="WHIT">	</span><span class="PUNC">}</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'> 25</span> </span><span class="WHIT">	
