--- a/documentation/symbols/src/_Users_ibon_js_CAAT_src_model_imagepreloader.js.html
+++ b/documentation/symbols/src/_Users_ibon_js_CAAT_src_model_imagepreloader.js.html
@@ -6,7 +6,7 @@
 	.REGX {color: #339;}
 	.line {border-right: 1px dotted #666; color: #666; font-style: normal;}
 	</style></head><body><pre><span class='line'>  1</span> <span class="COMM">/**
-<span class='line'>  2</span>  * @author  Hyperandroid  ||  http://hyperandroid.com/
+<span class='line'>  2</span>  * See LICENSE file.
 <span class='line'>  3</span>  *
 <span class='line'>  4</span>  * Image/Resource preloader.
 <span class='line'>  5</span>  *
