--- a/documentation/symbols/src/_Users_ibon_js_CAAT_src_path_pathactor.js.html
+++ b/documentation/symbols/src/_Users_ibon_js_CAAT_src_path_pathactor.js.html
@@ -6,7 +6,7 @@
 	.REGX {color: #339;}
 	.line {border-right: 1px dotted #666; color: #666; font-style: normal;}
 	</style></head><body><pre><span class='line'>  1</span> <span class="COMM">/**
-<span class='line'>  2</span>  * @author  Hyperandroid  ||  http://hyperandroid.com/
+<span class='line'>  2</span>  * See LICENSE file.
 <span class='line'>  3</span>  *
 <span class='line'>  4</span>  * An actor to show the path and its handles in the scene graph. 
 <span class='line'>  5</span>  *
@@ -57,8 +57,8 @@
 <span class='line'> 50</span> 
 <span class='line'> 51</span> </span><span class="WHIT">            </span><span class="NAME">canvas.strokeStyle</span><span class="PUNC">=</span><span class="STRN">'black'</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'> 52</span> </span><span class="WHIT">			</span><span class="NAME">this.path.paint</span><span class="PUNC">(</span><span class="NAME">director</span><span class="PUNC">)</span><span class="PUNC">;</span><span class="WHIT">
-<span class='line'> 53</span> </span><span class="WHIT">			
-<span class='line'> 54</span> 			</span><span class="KEYW">if</span><span class="WHIT"> </span><span class="PUNC">(</span><span class="WHIT"> </span><span class="NAME">this.bOutline</span><span class="WHIT"> </span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="WHIT">
+<span class='line'> 53</span> 
+<span class='line'> 54</span> </span><span class="WHIT">			</span><span class="KEYW">if</span><span class="WHIT"> </span><span class="PUNC">(</span><span class="WHIT"> </span><span class="NAME">this.bOutline</span><span class="WHIT"> </span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="WHIT">
 <span class='line'> 55</span> </span><span class="WHIT">				</span><span class="NAME">canvas.strokeStyle</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NAME">this.outlineColor</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'> 56</span> </span><span class="WHIT">				</span><span class="NAME">canvas.strokeRect</span><span class="PUNC">(</span><span class="NUMB">0</span><span class="PUNC">,</span><span class="NUMB">0</span><span class="PUNC">,</span><span class="NAME">this.width</span><span class="PUNC">,</span><span class="NAME">this.height</span><span class="PUNC">)</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'> 57</span> </span><span class="WHIT">			</span><span class="PUNC">}</span><span class="WHIT">
