--- a/documentation/symbols/src/_Users_ibon_js_CAAT_src_CAAT.js.html
+++ b/documentation/symbols/src/_Users_ibon_js_CAAT_src_CAAT.js.html
@@ -6,51 +6,29 @@
 	.REGX {color: #339;}
 	.line {border-right: 1px dotted #666; color: #666; font-style: normal;}
 	</style></head><body><pre><span class='line'>  1</span> <span class="COMM">/**
-<span class='line'>  2</span>  * @author  Hyperandroid  ||  http://hyperandroid.com/
+<span class='line'>  2</span>  * See LICENSE file.
 <span class='line'>  3</span>  *
 <span class='line'>  4</span>  * Library namespace.
 <span class='line'>  5</span>  * CAAT stands for: Canvas Advanced Animation Tookit.
 <span class='line'>  6</span>  */</span><span class="WHIT">
 <span class='line'>  7</span> 
 <span class='line'>  8</span> </span><span class="COMM">/**
-<span class='line'>  9</span>  * @license
-<span class='line'> 10</span>  * 
-<span class='line'> 11</span>  * The MIT License
-<span class='line'> 12</span>  * Copyright (c) 2010-2011 Ibon Tolosana, Hyperandroid || http://labs.hyperandroid.com/
-<span class='line'> 13</span> 
-<span class='line'> 14</span>  * Permission is hereby granted, free of charge, to any person obtaining a copy
-<span class='line'> 15</span>  * of this software and associated documentation files (the "Software"), to deal
-<span class='line'> 16</span>  * in the Software without restriction, including without limitation the rights
-<span class='line'> 17</span>  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-<span class='line'> 18</span>  * copies of the Software, and to permit persons to whom the Software is
-<span class='line'> 19</span>  * furnished to do so, subject to the following conditions:
-<span class='line'> 20</span> 
-<span class='line'> 21</span>  * The above copyright notice and this permission notice shall be included in
-<span class='line'> 22</span>  * all copies or substantial portions of the Software.
-<span class='line'> 23</span> 
-<span class='line'> 24</span>  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-<span class='line'> 25</span>  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-<span class='line'> 26</span>  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-<span class='line'> 27</span>  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-<span class='line'> 28</span>  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-<span class='line'> 29</span>  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-<span class='line'> 30</span>  * THE SOFTWARE.
-<span class='line'> 31</span>  *
-<span class='line'> 32</span>  */</span><span class="WHIT">
-<span class='line'> 33</span> 
-<span class='line'> 34</span> </span><span class="COMM">/**
-<span class='line'> 35</span>  * @namespace
-<span class='line'> 36</span>  */</span><span class="WHIT">
-<span class='line'> 37</span> </span><span class="KEYW">var</span><span class="WHIT"> </span><span class="NAME">CAAT</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NAME">CAAT</span><span class="WHIT"> </span><span class="PUNC">||</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="PUNC">}</span><span class="PUNC">;</span><span class="WHIT">
-<span class='line'> 38</span> 
-<span class='line'> 39</span> </span><span class="NAME">Function.prototype.bind</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="KEYW">function</span><span class="PUNC">(</span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="WHIT">
-<span class='line'> 40</span> </span><span class="WHIT">    </span><span class="KEYW">var</span><span class="WHIT"> </span><span class="NAME">fn</span><span class="PUNC">=</span><span class="WHIT">     </span><span class="KEYW">this</span><span class="PUNC">;</span><span class="WHIT">                                   </span><span class="COMM">// the function</span><span class="WHIT">
-<span class='line'> 41</span> </span><span class="WHIT">    </span><span class="KEYW">var</span><span class="WHIT"> </span><span class="NAME">args</span><span class="PUNC">=</span><span class="WHIT">   </span><span class="NAME">Array.prototype.slice.call</span><span class="PUNC">(</span><span class="NAME">arguments</span><span class="PUNC">)</span><span class="PUNC">;</span><span class="WHIT">  </span><span class="COMM">// copy the arguments.</span><span class="WHIT">
-<span class='line'> 42</span> </span><span class="WHIT">    </span><span class="KEYW">var</span><span class="WHIT"> </span><span class="NAME">obj</span><span class="PUNC">=</span><span class="WHIT">    </span><span class="NAME">args.shift</span><span class="PUNC">(</span><span class="PUNC">)</span><span class="PUNC">;</span><span class="WHIT">                           </span><span class="COMM">// first parameter will be context 'this'</span><span class="WHIT">
-<span class='line'> 43</span> </span><span class="WHIT">    </span><span class="KEYW">return</span><span class="WHIT"> </span><span class="KEYW">function</span><span class="PUNC">(</span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="WHIT">
-<span class='line'> 44</span> </span><span class="WHIT">        </span><span class="KEYW">return</span><span class="WHIT"> </span><span class="NAME">fn.apply</span><span class="PUNC">(</span><span class="WHIT">
-<span class='line'> 45</span> </span><span class="WHIT">                </span><span class="NAME">obj</span><span class="PUNC">,</span><span class="WHIT">
-<span class='line'> 46</span> </span><span class="WHIT">                </span><span class="NAME">args.concat</span><span class="PUNC">(</span><span class="NAME">Array.prototype.slice.call</span><span class="PUNC">(</span><span class="NAME">arguments</span><span class="PUNC">)</span><span class="PUNC">)</span><span class="PUNC">)</span><span class="PUNC">;</span><span class="WHIT">
-<span class='line'> 47</span> </span><span class="WHIT">    </span><span class="PUNC">}</span><span class="WHIT">
-<span class='line'> 48</span> </span><span class="PUNC">}</span><span class="PUNC">;</span><span class="WHIT">
-<span class='line'> 49</span> </span></pre></body></html>
+<span class='line'>  9</span>  * @namespace
+<span class='line'> 10</span>  */</span><span class="WHIT">
+<span class='line'> 11</span> </span><span class="KEYW">var</span><span class="WHIT"> </span><span class="NAME">CAAT</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="NAME">CAAT</span><span class="WHIT"> </span><span class="PUNC">||</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="PUNC">}</span><span class="PUNC">;</span><span class="WHIT">
+<span class='line'> 12</span> 
+<span class='line'> 13</span> </span><span class="COMM">/**
+<span class='line'> 14</span>  * Common bind function. Allows to set an object's function as callback. Set for every function in the
+<span class='line'> 15</span>  * javascript context.
+<span class='line'> 16</span>  */</span><span class="WHIT">
+<span class='line'> 17</span> </span><span class="NAME">Function.prototype.bind</span><span class="PUNC">=</span><span class="WHIT"> </span><span class="KEYW">function</span><span class="PUNC">(</span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="WHIT">
+<span class='line'> 18</span> </span><span class="WHIT">    </span><span class="KEYW">var</span><span class="WHIT"> </span><span class="NAME">fn</span><span class="PUNC">=</span><span class="WHIT">     </span><span class="KEYW">this</span><span class="PUNC">;</span><span class="WHIT">                                   </span><span class="COMM">// the function</span><span class="WHIT">
+<span class='line'> 19</span> </span><span class="WHIT">    </span><span class="KEYW">var</span><span class="WHIT"> </span><span class="NAME">args</span><span class="PUNC">=</span><span class="WHIT">   </span><span class="NAME">Array.prototype.slice.call</span><span class="PUNC">(</span><span class="NAME">arguments</span><span class="PUNC">)</span><span class="PUNC">;</span><span class="WHIT">  </span><span class="COMM">// copy the arguments.</span><span class="WHIT">
+<span class='line'> 20</span> </span><span class="WHIT">    </span><span class="KEYW">var</span><span class="WHIT"> </span><span class="NAME">obj</span><span class="PUNC">=</span><span class="WHIT">    </span><span class="NAME">args.shift</span><span class="PUNC">(</span><span class="PUNC">)</span><span class="PUNC">;</span><span class="WHIT">                           </span><span class="COMM">// first parameter will be context 'this'</span><span class="WHIT">
+<span class='line'> 21</span> </span><span class="WHIT">    </span><span class="KEYW">return</span><span class="WHIT"> </span><span class="KEYW">function</span><span class="PUNC">(</span><span class="PUNC">)</span><span class="WHIT"> </span><span class="PUNC">{</span><span class="WHIT">
+<span class='line'> 22</span> </span><span class="WHIT">        </span><span class="KEYW">return</span><span class="WHIT"> </span><span class="NAME">fn.apply</span><span class="PUNC">(</span><span class="WHIT">
+<span class='line'> 23</span> </span><span class="WHIT">                </span><span class="NAME">obj</span><span class="PUNC">,</span><span class="WHIT">
+<span class='line'> 24</span> </span><span class="WHIT">                </span><span class="NAME">args.concat</span><span class="PUNC">(</span><span class="NAME">Array.prototype.slice.call</span><span class="PUNC">(</span><span class="NAME">arguments</span><span class="PUNC">)</span><span class="PUNC">)</span><span class="PUNC">)</span><span class="PUNC">;</span><span class="WHIT">
+<span class='line'> 25</span> </span><span class="WHIT">    </span><span class="PUNC">}</span><span class="WHIT">
+<span class='line'> 26</span> </span><span class="PUNC">}</span><span class="PUNC">;</span><span class="WHIT">
+<span class='line'> 27</span> </span></pre></body></html>
