--- a/documentation/demos/demo5/text-on-path.html
+++ b/documentation/demos/demo5/text-on-path.html
@@ -180,7 +180,7 @@
             var rb = new CAAT.RotateBehavior().
                     setCycle(true).
                     setFrameTime(0, 4000).
-                    setValues( -Math.PI / 8, Math.PI / 8, 50, 0 ).
+                    setValues( -Math.PI / 8, Math.PI / 8, .50, 0 ).
                     setInterpolator(
                             new CAAT.Interpolator().createCubicBezierInterpolator(
                                     {x:0,y:0},
