--- a/documentation/demos/demo8/hierarchy.html
+++ b/documentation/demos/demo8/hierarchy.html
@@ -129,7 +129,8 @@
                             setFrameTime(0, rotationTime).
                             setValues(0, 2 * Math.PI).
                             setCycle(true).
-                            setAnchor( planet, -x, -y )
+                            //setAnchor( planet, -x, -y )
+                    setAnchor( planet, -x, -y )
                     );
 
             parent.addChild(planet);
@@ -213,7 +214,7 @@
                     new CAAT.RotateBehavior().
                             setCycle(true).
                             setFrameTime(0, 4000).
-                            setValues(-Math.PI / 8, Math.PI / 8, 50, 0).
+                            setValues(-Math.PI / 8, Math.PI / 8, .50, 0).
                             setInterpolator(
                                 new CAAT.Interpolator().
                                         createExponentialInOutInterpolator(3, true)
