--- a/documentation/tutorials/t2-7.html
+++ b/documentation/tutorials/t2-7.html
@@ -101,7 +101,7 @@
                             new CAAT.RotateBehavior().
                                     setCycle(true).
                                     setFrameTime(0, 4000).
-                                    setValues(-Math.PI / 8, Math.PI / 8, 50, 0).    // anchor at 50%, 0%
+                                    setValues(-Math.PI / 8, Math.PI / 8, .50, 0).    // anchor at 50%, 0%
                                     setInterpolator(
                                     new CAAT.Interpolator().createExponentialInOutInterpolator(3, true))
                             );
@@ -191,7 +191,7 @@
                             new CAAT.RotateBehavior().
                                     setCycle(true).
                                     setFrameTime(0, 4000).
-                                    setValues(-Math.PI / 8, Math.PI / 8, 50, 0).    // anchor at 50%, 0%
+                                    setValues(-Math.PI / 8, Math.PI / 8, .50, 0).    // anchor at 50%, 0%
                                     setInterpolator(
                                     new CAAT.Interpolator().createExponentialInOutInterpolator(3, true))
                             );
