--- a/documentation/demos/demo4/coordinates.html
+++ b/documentation/demos/demo4/coordinates.html
@@ -302,7 +302,7 @@
                         new CAAT.RotateBehavior().
                                 setCycle(true).
                                 setFrameTime( 0, 4000 ).
-                                setValues( -Math.PI/8, Math.PI/8, 50, 0 ).  // anchor at 50%, 0%
+                                setValues( -Math.PI/8, Math.PI/8, .50, 0 ).  // anchor at 50%, 0%
                                 setInterpolator(
                                     new CAAT.Interpolator().createCubicBezierInterpolator(
                                         {x:0,y:0},
